--- a/Final Project/forms.html
+++ b/Final Project/forms.html
@@ -12,15 +12,15 @@
 		<p class="sa">Feedback</p>
 	</center>
 
-	<form action="/submit" method="POST">
+	<form action="link here" method="POST">
 		<div>
-			<label>__Feedback</label>
+			<label>feedBack</label>
 			<input type="text" name="feedBack">
 		</div>
 
 		<br>
 		<div>
-			<label>__What do you want th change in the animation world?</label>
+			<label>What do you want th change in the animation world?</label>
 			<input type="text" name="Change" >
 		</div>
 		<br>
